--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
     "mongoose": "^5.10.9",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^8.3.1"
